# bv

./: README.md  gnuplot.md  pyproject.toml  read_bv.py  write_bv.cpp
examples/: read_bv.py  write_bv.cpp
include/bv/: bv_writer.hpp
python/bv/: __init__.py
