[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bv"
version = "0.1.0"
description = "Python reader for the Binary Values table format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Binary Values Authors"}]
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["python"]
